tests/pass/imports/foo.yp
fn foo(){
    i32 a = 1;
}