tests/fail/undefined_var/test.yp
fn main() {
    _ x = y + 1;
}
